kubernetes/flask-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask-backend-deployment
spec:
  replicas: 2
  strategy:
  type: RollingUpdate
  rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
        - name: flask-app
          imagePullPolicy: Always
          image: pmbrull/k8-flask-api
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
