kubernetes/postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment-postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      terminationGracePeriodSeconds: 180
      containers:
        - name: postgres
          image: postgres:10.4
          ports:
            - name: tcp-5432
              containerPort: 5432
          volumeMounts:
            - name: postgres-volume-mount
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      volumes:
      - name: postgres-volume-mount
        persistentVolumeClaim:
          claimName: postgres-pvc
      restartPolicy: Always
