kubernetes/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-flask-backend
spec:
  # type: NodePort
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
      # nodePort: 31234
      name: tcp-5000
      protocol: TCP
  selector:
    app: flask-backend
